2009-12-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* propagate SPECIAL and HISTOGRAM sections from .plot files
	through compare-histos

2009-12-04  Andy Buckley  <andy@insectnation.org>

	* Use scaling rather than normalising in DELPHI_1996: this is
	generally desirable, since normalizing to 1 for 1/sig dsig/dx
	observables isn't correct if any events fall outside the histo
	bounds.

	* Many fixes to OPAL_2004.

	* Improved Hemispheres interface to remove unnecessary consts on
	returned doubles, and to also return non-squared versions
	of (scaled) hemisphere masses.

	* Add "make pyclean" make target at the top level to make it
	easier for developers to clean their Python module build when the
	API is extended.

	* Identify use of unvalidated analyses with a warning message at
	runtime.

	* Providing Analysis::sqrtS() and Analysis::beams(), and making
	sure they're available by the time the init methods are called.

2009-12-02  Andy Buckley  <andy@insectnation.org>

	* Adding passing of first event sqrt(s) and beams to analysis handler.

	* Restructuring running to only use one HepMC input file (no-one
	was using multiple ones, right?) and to break down the Run class
	to cleanly separate the init and event loop phases. End of file is
	now neater.

2009-12-01  Andy Buckley  <andy@insectnation.org>

	* Adding parsing of beam types and pairs of energies from YAML.

2009-12-01  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing trigger efficiency in CDF_2009_S8233977

2009-11-30  Andy Buckley  <andy@insectnation.org>

	* Using shared pointers to make I/O object memory management
	neater and less error-prone.

	* Adding crossSectionPerEvent() method [==
	crossSection()/sumOfWeights()] to Analysis. Useful for histogram
	scaling since numerator of sumW_passed/sumW_total (to calculate
	pass-cuts xsec) is cancelled by dividing histo by sumW_passed.

	* Clean-up of Particle class and provision of inline PID::
	functions which take a Particle as an argument to avoid having to