@@ -4,7 +4,7 @@ Summary: Strange particle production in pp at 200 GeV
 Experiment: STAR
 Collider: RHIC pp 200 GeV
 SpiresID: 6860818
-Status: UNVALIDATED, under DEVELOPMENT, NOT WORKING
+Status: VALIDATED
 Authors:
  - Hendrik Hoeth <hendrik.hoeth@cern.ch>
 References:
@@ -17,4 +17,5 @@ PtCuts: [0]
 Description:
   pT distributions of identified strange particles in pp collisions 
   at $\sqrt{s} = 200$ GeV, measured by the STAR experiment at RHIC in
-  non-single-diffractive minbias events.
+  non-single-diffractive minbias events. WARNING The <pT> vs. particle
+  mass plot is not validated yet and might be wrong.
