@@ -66,6 +66,7 @@ ShowZero=0
 # BEGIN PLOT /STAR_2006_S6860818/d02-x02-y01
 Title=Ratio of $\bar \Lambda / \Lambda$ as function of $p_\perp$
 XLabel=$p_\perp$ [GeV]
+YLabel=$\bar \Lambda / \Lambda$
 LogY=0
 YMin=0
 YMax=2
@@ -74,7 +75,38 @@ YMax=2
 # BEGIN PLOT /STAR_2006_S6860818/d02-x03-y01
 Title=Ratio of $\Xi^+ / \Xi^-$ as function of $p_\perp$
 XLabel=$p_\perp$ [GeV]
+YLabel=$\Xi^+ / \Xi^-$
 LogY=0
 YMin=0
 YMax=2
 # END PLOT
+
+# BEGIN PLOT /STAR_2006_S6860818/d03-x01-y01
+Title=Mean $p_\perp$ vs particle mass
+XLabel=mass [GeV]
+YLabel=$\langle p_\perp \rangle$ [GeV]
+LogY=0
+XMin=0
+XMax=1.8
+# END PLOT
+# BEGIN HISTOGRAM /STAR_2006_S6860818/d03-x01-y01
+ErrorBars=1
+PolyMarker=o
+# END HISTOGRAM
+# BEGIN SPECIAL /STAR_2006_S6860818/d03-x01-y01
+\rput[B]\physicscoor(0.145, 0.14){\small $\pi^-$}
+\rput[B]\physicscoor(0.480, 0.14){\small $K^-$}
+\rput[B]\physicscoor(0.510, 0.25){\small $K^0$}
+\rput[B]\physicscoor(0.775, 0.14){\small $\rho^0$}
+\rput[B]\physicscoor(0.896, 0.14){\small $K^{*0}$}
+\rput[B]\physicscoor(0.938, 0.25){\small $\bar p$}
+\rput[B]\physicscoor(1.019, 0.14){\small $\phi$}
+\rput[B]\physicscoor(1.105, 0.14){\small $\Lambda$}
+\rput[B]\physicscoor(1.125, 0.25){\small $\bar \Lambda$}
+\rput[B]\physicscoor(1.312, 0.14){\small $\Xi^-$}
+\rput[B]\physicscoor(1.332, 0.25){\small $\bar \Xi^+$}
+\rput[B]\physicscoor(1.384, 0.14){\small $\Sigma$}
+\rput[B]\physicscoor(1.520, 0.14){\small $\Lambda$}
+\rput[B]\physicscoor(1.672, 0.14){\small $(\Omega + \bar\Omega)$}
+# END SPECIAL
+
