@@ -219,44 +219,49 @@ Title=$\bar \Xi / \Xi$ ratio vs $p_\perp$
 # END HISTOGRAM
 
 
-# --------------------------------------------------------------------------
-# 
-# Figure 11: Mean-Pt vs particle mass
-# 
-# +--------------------------------------------------+
-# |              200 GeV p+p data (red)              |
-# |--------------------------------------------------|
-# |particle name  |mean-pT (GeV/c)|error (stat only) |
-# |---------------+---------------+------------------|
-# |pi-            |0.348000       |0.018000          |
-# |---------------+---------------+------------------|
-# |K-             |0.605000       |0.073000          |
-# |---------------+---------------+------------------|
-# |K0             |0.600000       |0.030000          |
-# |---------------+---------------+------------------|
-# |rho^{0}        |0.640000       |0.060000          |
-# |---------------+---------------+------------------|
-# |K*{0}          |0.810000       |0.140000          |
-# |---------------+---------------+------------------|
-# |p-bar          |0.683000       |0.041000          |
-# |---------------+---------------+------------------|
-# |phi            |0.820000       |0.050000          |
-# |---------------+---------------+------------------|
-# |lambda         |0.780000       |0.040000          |
-# |---------------+---------------+------------------|
-# |lambda-bar     |0.760000       |0.040000          |
-# |---------------+---------------+------------------|
-# |Xi{-}          |0.924000       |0.130000          |
-# |---------------+---------------+------------------|
-# |Xi-bar{+}      |0.881000       |0.130000          |
-# |---------------+---------------+------------------|
-# |sigma(1385)    |1.020000       |0.080000          |
-# |---------------+---------------+------------------|
-# |lambda(1520)   |1.080000       |0.110000          |
-# |---------------+---------------+------------------|
-# |omega+Omega-bar|1.080000       |0.300000          |
-# |--------------------------------------------------|
-# ------------------------------------------------------------------------
+## Figure 11: Mean-Pt vs particle mass
+## 
+## +--------------------------------------------------+
+## |              200 GeV p+p data (red)              |
+## |--------------------------------------------------+----------------------------------+
+## |particle name  |mean-pT (GeV/c)|error (stat only) |  mass for filling the histograms |
+## |---------------+---------------+------------------+----------------------------------+
+## |pi-            |0.348000       |0.018000          |  0.1396                          |
+## |K-             |0.605000       |0.073000          |  0.4856                          |
+## |K0             |0.600000       |0.030000          |  0.5056                          |
+## |rho^{0}        |0.640000       |0.060000          |  0.7755                          |
+## |K*{0}          |0.810000       |0.140000          |  0.8960                          |
+## |p-bar          |0.683000       |0.041000          |  0.9383                          |
+## |phi            |0.820000       |0.050000          |  1.0190                          |
+## |lambda         |0.780000       |0.040000          |  1.1050                          |
+## |lambda-bar     |0.760000       |0.040000          |  1.1250                          |
+## |Xi{-}          |0.924000       |0.130000          |  1.3120                          |
+## |Xi-bar{+}      |0.881000       |0.130000          |  1.3320                          |
+## |sigma(1385)    |1.020000       |0.080000          |  1.3840                          |
+## |lambda(1520)   |1.080000       |0.110000          |  1.5200                          |
+## |omega+Omega-bar|1.080000       |0.300000          |  1.6720                          |
+## |-------------------------------------------------------------------------------------|
+
+# BEGIN HISTOGRAM mean_pt_vs_mass
+AidaPath=/REF/STAR_2006_S6860818/d03-x01-y01
+Title=Mean $p_\perp$ vs particle mass
+0.1296	0.1496	0.348000	0.018000
+0.4756	0.4956	0.605000	0.073000
+0.4956	0.5156	0.600000	0.030000
+0.7655	0.7855	0.640000	0.060000
+0.8860	0.9060	0.810000	0.140000
+0.9283	0.9483	0.683000	0.041000
+1.0090	1.0322	0.820000	0.050000
+1.0950	1.1150	0.780000	0.040000
+1.1150	1.1350	0.760000	0.040000
+1.3020	1.3220	0.924000	0.130000
+1.3220	1.3420	0.881000	0.130000
+1.3740	1.3940	1.020000	0.080000
+1.5100	1.5300	1.080000	0.110000
+1.6620	1.6820	1.080000	0.300000
+# END HISTOGRAM
+
+
 # 
 # Figure 20: Particle yield ratios vs THERMUS model calculations
 # 
