@@ -25,9 +25,7 @@ namespace Rivet {
     PIPLUS = 211,
     PIMINUS = -211,
     K0L = 130,
-    K0LBAR = -130,
     K0S = 310,
-    K0SBAR = -310,
     KPLUS = 321,
     KMINUS = -321,
     LAMBDA = 3122,
